[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "swiftsimio",
    "swiftsimio.initial_conditions",
    "swiftsimio.metadata",
    "swiftsimio.metadata.cosmology",
    "swiftsimio.metadata.metadata",
    "swiftsimio.metadata.particle",
    "swiftsimio.metadata.unit",
    "swiftsimio.metadata.writer",
    "swiftsimio.metadata.soap",
    "swiftsimio.visualisation",
    "swiftsimio.visualisation.projection_backends",
    "swiftsimio.visualisation.slice_backends",
    "swiftsimio.visualisation.volume_render_backends",
    "swiftsimio.visualisation.tools",
    "swiftsimio.visualisation.smoothing_length",
]

[project]
name = "swiftsimio"
version="10.5.0"
authors = [
    { name="Josh Borrow", email="josh@joshborrow.com" },
]
description="SWIFTsim (swiftsim.com) i/o routines for python."
readme = "README.rst"
requires-python = ">3.10.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=5.0",
    "numpy>=2.1.0",
    "h5py",
    "unyt>=3.0.4",
    "numba>=0.50.0",
]

[project.urls]
"Homepage" = "https://github.com/SWIFTSIM/swiftsimio"
"Bug Tracker" = "https://github.com/SWIFTSIM/swiftsimio/issues"
"Documentation" = "https://swiftsimio.readthedocs.io/en/latest"

[project.scripts]
swiftsnap = "swiftsimio.swiftsnap:swiftsnap"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # enable eventually
docstring-code-line-length = "dynamic"