[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "swiftsimio",
    "swiftsimio.initial_conditions",
    "swiftsimio.metadata",
    "swiftsimio.metadata.cosmology",
    "swiftsimio.metadata.metadata",
    "swiftsimio.metadata.particle",
    "swiftsimio.metadata.unit",
    "swiftsimio.metadata.writer",
    "swiftsimio.metadata.soap",
    "swiftsimio.visualisation",
    "swiftsimio.visualisation.projection_backends",
    "swiftsimio.visualisation.slice_backends",
    "swiftsimio.visualisation.volume_render_backends",
    "swiftsimio.visualisation.tools",
    "swiftsimio.visualisation.smoothing_length",
]

[project]
name = "swiftsimio"
version="10.6.0"
authors = [
    { name="Josh Borrow", email="josh@joshborrow.com" },
]
description="SWIFTsim (swiftsim.com) i/o routines for python."
readme = "README.rst"
requires-python = ">3.10.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=5.0",
    "numpy>=2.1.0",
    "h5py",
    "unyt>=3.0.4",
    "numba>=0.50.0",
]

[project.urls]
"Homepage" = "https://github.com/SWIFTSIM/swiftsimio"
"Bug Tracker" = "https://github.com/SWIFTSIM/swiftsimio/issues"
"Documentation" = "https://swiftsimio.readthedocs.io/en/latest"

[project.scripts]
swiftsnap = "swiftsimio.swiftsnap:swiftsnap"
