[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "swiftsimio",
    "swiftsimio.metadata",
    "swiftsimio.metadata.cosmology",
    "swiftsimio.metadata.metadata",
    "swiftsimio.metadata.particle",
    "swiftsimio.metadata.unit",
    "swiftsimio.metadata.writer",
    "swiftsimio.metadata.soap",
    "swiftsimio.visualisation",
    "swiftsimio.visualisation.projection_backends",
    "swiftsimio.visualisation.slice_backends",
    "swiftsimio.visualisation.volume_render_backends",
    "swiftsimio.visualisation.tools",
    "swiftsimio.visualisation.smoothing_length",
]

[project]
name = "swiftsimio"
version="10.7.2"
authors = [
    { name="Josh Borrow", email="josh@joshborrow.com" },
]
description="SWIFTsim (swiftsim.com) i/o routines for python."
readme = "README.rst"
requires-python = ">3.10.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=7.0",
    "numpy>=2.1.0",
    "h5py",
    "unyt>=3.1.0",
    "numba>=0.50.0",
]

[project.urls]
"Homepage" = "https://github.com/SWIFTSIM/swiftsimio"
"Bug Tracker" = "https://github.com/SWIFTSIM/swiftsimio/issues"
"Documentation" = "https://swiftsimio.readthedocs.io/en/latest"

[project.scripts]
swiftsnap = "swiftsimio.swiftsnap:swiftsnap"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "numpydoc",
    "matplotlib",
    "scipy",
    "wily",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "sphinx_design",
]
all = [
    "swiftsimio[dev,docs]"
]

[tool.ruff]
exclude = ["docs/source/conf.py"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "ANN"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # enable eventually
docstring-code-line-length = "dynamic"

# numpydoc_validation provides many useful rules that ruff does not yet.
# If ruff support for rules improves this can be phased out.
[tool.numpydoc_validation]
checks = [
       "GL01",
       "GL02",
       "GL03",
       "GL05",
       "GL06",
       "GL07",
       "GL08",
       "GL10",
       "SS01",
       "SS02",
       "SS03",
       "SS04",
       "SS05",
       "PR01",
       "PR02",
       "PR03",
       "PR04",
       "PR05",
       "PR06",
       "PR07",
       "PR08",
       "PR09",
       "PR10",
       "RT02",
       "RT03",
       "RT04",
       "RT05",
       "SA02",
       "SA03",
       "SS06",
]
# Don't document class __init__ methods, put the docstring on the class object.
exclude = ['\.__init__$', '\.test_']
